build: auto-sort/format imports with isort

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ dev =
     black
     build
     flake8
+    isort
     mypy
     pre-commit
     pytest
@@ -50,3 +51,8 @@ universal = 1
 [flake8]
 max-line-length = 88
 extend-ignore = E203
+
+[isort]
+profile = black
+# Place each import on its own line to reduce merge conflicts
+force_single_line = true
